manifests/moneyd-local.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moneyd
---
apiVersion: v1
kind: Service
metadata:
  name: moneyd
  namespace: moneyd
spec:
  type: NodePort
  selector:
    app: moneyd
  nodePort: 7768
  ports:
  - protocol: TCP
    port: 7768
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneyd
  namespace: moneyd
  labels:
    app: moneyd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moneyd
  template:
    metadata:
      labels:
        app: moneyd
    spec:
      containers:
      - name: moneyd-xrp
        image: wilsonianbcoil/moneyd-local
        ports:
        - containerPort: 7768
