manifests/moneyd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moneyd
---
apiVersion: v1
kind: Service
metadata:
  name: moneyd
  namespace: moneyd
spec:
  selector:
    app: moneyd
  ports:
  - protocol: TCP
    port: 7768
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneyd
  namespace: moneyd
  labels:
    app: moneyd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moneyd
  template:
    metadata:
      labels:
        app: moneyd
    spec:
      volumes:
      - name: moneyd-config
        secret:
          secretName: moneyd-config
      containers:
      - name: moneyd-xrp
        image: wilsonianbcoil/moneyd-xrp
        args: ["xrp:start"]
        ports:
        - containerPort: 7768
        volumeMounts:
        - name: moneyd-config
          mountPath: "/root"
          readOnly: true
