manifests/c8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: c8s
  namespace: c8s
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/hsts-max-age: "63072000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-preload: "true"
    ingress.kubernetes.io/frame-deny: "true"
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/browser-xss-filter: "true"
spec:
  tls:
  - hosts:
    - c8s.example.com
    - "*.c8s.example.com"
    secretName: c8s-certificate
  rules:
  - host: "c8s.example.com"
    http: &http_rules
      paths:
      - backend:
          serviceName: c8s-service
          servicePort: 80
  - host: "*.c8s.example.com"
    http: *http_rules
