manifests/c8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: c8s-untrusted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: c8s-untrusted
  name: c8s-untrusted
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - to:
    - ipBlock:
       cidr: 0.0.0.0/0
       except:
       - 10.0.0.0/8
       - 172.16.0.0/12
       - 192.168.0.0/16
---
apiVersion: v1
kind: Namespace
metadata:
  name: c8s
---
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: c8s
  namespace: c8s
  labels:
    app: c8s
    serving.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
      labels:
        app: c8s
    spec:
      containers:
      - image: wilsonianbcoil/c8s
        env:
        - name: CODIUS_PUBLIC_URI
          value: https://c8s.example.com
        - name: DEBUG
          value: "*c8s*,-*trace*"
        - name: CODIUS_BIND_IP
          value: "0.0.0.0"
        - name: CODIUS_K8S_NAMESPACE
          value: c8s-untrusted
        - name: CODIUS_K8S_SERVICE_ACCOUNT
          value: c8s-untrusted
        - name: CODIUS_PAYMENT_POINTER
          value: $example.com/codius
        - name: NODE_ENV
          value: production
        ports:
        - containerPort: 3000
      serviceAccountName: c8s
